welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: identifier expected but ')' found.
var message:String litMessage()
                              ^BDR2:18: error: ')' expected but '}' found.
	}
        ^